# cli-agent-ctx

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.agent-ctx/: config.toml  decisions.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: bugs.md  cli-spec.md  design-identity.md  prd.md  progress-state.md
site/: astro.config.mjs  package-lock.json  package.json
site/public/: install.sh
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
src/: app.rs  cli.rs  error.rs  main.rs  update.rs
src/commands/: completions.rs  config.rs  decide.rs  diff.rs  init.rs  load.rs  log.rs  mod.rs  self_update.rs  snap.rs  sync.rs  version.rs
src/config/: defaults.rs  mod.rs
src/core/: decisions.rs  formatter.rs  git.rs  mod.rs  snapshot.rs
src/output/: mod.rs
