[package]
name = "agent-ctx"
version = "0.2.1"
edition = "2021"
description = "AI Agent Context Manager — persist and share development context across AI agent sessions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/devcool-dev/cli-agent-ctx"
readme = "README.md"
keywords = ["cli", "developer-tool", "ai-agent", "context", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
whoami = "1"
indicatif = "0.17"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
